--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -11,9 +11,19 @@ html {
 a {
 	text-decoration: none;
 }
+
+.main-page-listings {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	margin: 0 auto;
+	width: 700px;
+}
+
 .main-cat {
 	padding: 5px;
 	color: blue;
 	background: #eee;
 	font-size: 18px;
+	width: 300px;
 }
